--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,41 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_weight="2"
+    android:gravity= "center"
+    android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/button_red"
-        android:layout_width="230dp"
-        android:layout_height="350dp"
-        android:backgroundTint="#6AFF0000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
 
-    <Button
-        android:id="@+id/button_blue"
-        android:layout_width="230dp"
-        android:layout_height="350dp"
-        android:backgroundTint="#8100DEFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/red_Button"
+            android:layout_width="160dp"
+            android:layout_height="186dp"
+            android:background="@color/color_Red"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
+            />
 
-    <Button
-        android:id="@+id/button_yellow"
-        android:layout_width="230dp"
-        android:layout_height="350dp"
-        android:backgroundTint="#7EFFE200"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <Button
+            android:id="@+id/green_Button"
+            android:layout_width="160dp"
+            android:layout_height="186dp"
+            android:background="@color/color_Green"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"/>
 
-    <Button
-        android:id="@+id/button_green"
-        android:layout_width="230dp"
-        android:layout_height="350dp"
-        android:backgroundTint="#8D00FF0C"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/blue_Button"
+            android:layout_width="160dp"
+            android:layout_height="186dp"
+            android:background="@color/color_Blue"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"/>
+
+        <Button
+            android:id="@+id/yellow_Button"
+            android:layout_width="160dp"
+            android:layout_height="186dp"
+            android:background="@color/color_Yellow"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"/>
+    </LinearLayout>
+
+
+
+</LinearLayout>
