--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="color_LightGreen">#03F80A</color>
     <color name="color_LightBlue">#041DF8</color>
     <color name="color_LightYellow">#FCE204</color>
+    <color name="color_Black">#000000</color>
 
 
 </resources>
